--- a/css/cuerpo.css
+++ b/css/cuerpo.css
@@ -16,11 +16,6 @@
     }
 }*/
 
-.carousel .carousel-item {
-    /*width: 300px !important;*/
-    /*height: 400px !important;*/
-}
-
 /*Caurusel anchura*/
 .carousel {
     max-height: 400px
@@ -32,4 +27,35 @@
 .renglon3,
 .renglon4 {
     opacity: 0;
+}
+
+/*Fin Inicio*/
+
+/*Seccion tratamientos*/
+
+#parrafo {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+#saludo {
+    font-family: 'Sacramento', cursive;
+    font-size: 23px;
+}
+
+/*Modal pantalla completa
+.modal.open {
+    width: 100%;
+    max-height: 100%;
+    height: 100%;
+    top: 0 !important;
+}*/
+
+
+/*Quita el espacio entre cada elemento seccion*/
+
+header,
+footer,
+section {
+    overflow: auto;
 }
