--- a/css/cuerpo.css
+++ b/css/cuerpo.css
@@ -75,3 +75,10 @@ footer,
 section {
     overflow: auto;
 }
+
+/*Seccion Clinicas*/
+/*Alineacion de los iconos*/
+.inline-icon {
+    font-size: inherit;
+    vertical-align: bottom;
+}
