--- a/css/tratamientos.css
+++ b/css/tratamientos.css
@@ -27,22 +27,29 @@ section {
 /*Fin menu navegacion*/
 
 /*Inicio del Cuerpo*/
-
 /*Tamaño de la imagen parallax como fondo*/
 .parallax-container {
   height: 200px;
 }
 
 .parallax img {
+  z-index: -1;
   opacity: 0.5;
-  filter: alpha(opacity=50); /* For IE8 and earlier */
 }
-
-.parallax img:hover {
+.parallax-container:hover {
   opacity: 1.0;
-  filter: alpha(opacity=100); /* For IE8 and earlier */
 }
-
+.parallax h1{
+  margin-top: 5%;
+  margin-bottom: 0%;
+  padding: 10px;
+  font-size: 36px;
+  font-weight: bold;
+}
+.parallax span{
+  padding-top: 0px;
+  font-size: 26px;
+}
 /*Card Medico*/
 main .row{
     margin-top: 0%;
@@ -57,7 +64,7 @@ main .row{
 }
 .card .card-title{
     color: #142b3b !important;
-    text-shadow: 6px 1px 3px rgb(233, 178, 27);
+    text-shadow: 4px 1px 3px rgb(73, 70, 60);
 }
 /*Saludo del medico*/
 #saludo {
@@ -118,6 +125,23 @@ main .row{
 
 /*Fin de Tratamiento*/
 
+/*Anuncio Mensaje llamar*/
+.section-llamar .col{
+    padding: 15px;
+}
+.section-llamar h5{
+    margin: 0%;
+    padding: 15px;
+    padding-bottom: 0%;
+    font-family: Josefin,sans-serif;
+    font-size: 24px;
+}
+#boton-llamada{
+    padding-bottom: 30px;
+}
+#boton-llamada a:hover {
+  box-shadow: 1px 6px 10px rgba(0, 0, 0, 0.973);
+}
 /*Fin del Cuerpo*/
 
 /*Caracteristicas de los estilos del Modal*/
