--- a/css/index.css
+++ b/css/index.css
@@ -98,3 +98,36 @@ section {
 
 }
 /*Fin de las caracteristicas del boton flotante del chat*/
+
+/*ESTILOS para el formulario dezplegable*/
+.login_box {
+	display: none;
+	position: relative;
+	background: white;
+  border-radius: 6px;
+  width: 300px;
+  float: right;
+  padding-top: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+  margin-right: 10px;
+  margin-top: 5px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+}
+.login_box:after, .login_box:before {
+	bottom: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.login_box:after {
+	border-color: rgba(249, 249, 249, 0);
+	border-bottom-color: white;
+	border-width: 17px;
+	margin-left: 80px;
+}
