pre-update Materializecss

--- a/css/header.css
+++ b/css/header.css
@@ -60,7 +60,7 @@
   }
 }
 
-/*Fin lomks superiores*/
+/*Fin links superiores*/
 
 /*Quita el espcio entre la navBar y el Slider*/
 #navegacionPrincipal {
