add calendary function

--- a/css/medicos.css
+++ b/css/medicos.css
@@ -35,3 +35,11 @@ a.brand-logo img{
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+
+/*Toast styles*/
+#toast-container {
+  top: auto !important;
+  right: auto !important;
+  bottom: 8%;
+  left:87%;  
+}
