--- a/css/medicos.css
+++ b/css/medicos.css
@@ -43,3 +43,14 @@ a.brand-logo img{
   bottom: 8%;
   left:87%;  
 }
+
+/*Tamaño de las celdas de la tabla de citas*/
+.newWidthPhone{
+    min-width: 90px;
+}
+.newWidthCellMensaje{
+    min-width: 150px;
+}
+.newWidthDate{
+    min-width: 90px;
+}
